<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        >


        <Button
            android:text="@string/back_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/back_button"
        />

        <Button
            android:text="@string/next_label"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:id="@+id/next_button"
            android:layout_toEndOf="@+id/back_button"

        />


        <CheckBox android:id="@+id/checkbox_noun"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_label_noun"
        android:layout_below="@+id/inputGermanEditText"
        android:onClick="onCheckboxClicked"/>


        <CheckBox android:id="@+id/checkbox_adjective"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkbox_verb"
        android:text="@string/radio_label_adjective"
        android:onClick="onCheckboxClicked"/>


        <CheckBox android:id="@+id/checkbox_adverb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/radio_label_adverb"
        android:onClick="onCheckboxClicked"
        android:layout_below="@+id/checkbox_adjective"/>


        <EditText
        android:id="@+id/inputEnglishEditText"
        android:layout_width="327dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:ems="8"
        android:hint="@string/inputEnglishTextLabel"
        android:textSize="20sp"
        android:inputType="text"
        android:layout_below="@+id/checkbox_cardinalNumber"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp">

    </EditText>

        <EditText
            android:id="@+id/inputGermanEditText"
            android:layout_width="327dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:ems="8"
            android:hint="@string/inputGermanTextLabel"
            android:textSize="20sp"
            android:inputType="text"
            android:layout_below="@+id/back_button"
            android:layout_alignParentStart="true">
        </EditText>

        <CheckBox android:id="@+id/checkbox_preposition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_preposition"
            android:onClick="onCheckboxClicked"
            android:layout_marginStart="28dp"
            android:layout_below="@+id/checkbox_verb"
            android:layout_toEndOf="@+id/checkbox_adjective" />

        <CheckBox android:id="@+id/checkbox_verb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_verb"
            android:onClick="onCheckboxClicked"
            android:layout_alignBaseline="@+id/checkbox_noun"
            android:layout_alignBottom="@+id/checkbox_noun"
            android:layout_alignStart="@+id/checkbox_preposition" />

        <CheckBox android:id="@+id/checkbox_cardinalNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_label_cardinalNumber"
            android:onClick="onCheckboxClicked"
            android:layout_below="@+id/checkbox_preposition"
            android:layout_alignStart="@+id/checkbox_preposition" />



        <ImageButton
            android:text="@string/buttom_label_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_action_add"
            android:id="@+id/addButton"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_alignParentBottom="true"
            android:layout_alignEnd="@+id/checkbox_adverb" />

        <ImageButton
            android:text="@string/buttom_label_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inputEnglishEditText"
            android:src="@drawable/ic_action_remove"
            android:id="@+id/removeImageButton"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@+id/addButton"
            />


        <Button
            android:text="@string/buttom_label_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clearButton"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_below="@+id/inputEnglishEditText"
            android:layout_alignEnd="@+id/checkbox_cardinalNumber" />

    </RelativeLayout>
    </ScrollView>


</LinearLayout>
