<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">


    <TextView
        android:id="@+id/german_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="25sp"
        android:textColor="#000000"
        android:textStyle="bold"
        android:hint="@string/inputGermanTextLabel"
        android:paddingTop="@dimen/activity_vertical_margin" />


    <TextView
        android:id="@+id/partOfSpeech"
        android:layout_width="325dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="18sp"
        android:textColor="@android:color/holo_red_dark"
        android:hint="@string/partOfSpeechTextLabel"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <TextView
        android:id="@+id/english_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:textSize="25sp"
        android:textColor="?attr/colorControlNormal"
        android:hint="@string/inputEnglishTextLabel"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/fab_margin" />

</LinearLayout>